# tracker-module

./: .gitignore  Makefile  PROJECT.md  README.md  TECH_DEBT.md  entitlements.plist  eyetracker.spec  pyproject.toml
eyetracker/: __init__.py  app.py  calibration.py  create_test_form.py  create_test_page.py  home.py  image_grid.py  local_test_dao.py  main.py  pipeline.py  test_dao.py  test_form_page.py  test_library_page.py  theme.py  util.py
eyetracker/assets/: icon.icns
eyetracker/core/: aoi_sequence_map.py  face_emotion.py  fixation.py  fixation_map.py  fixation_offline.py  gaze_points_map.py  heatmap.py  metrics.py  monitor.py  pipeline.py  report_export.py  roi.py  saccade.py  time_fmt.py  util.py
eyetracker/data/: draft_cache.py  http_client.py  local_test_dao.py  login_service.py  settings.py
eyetracker/data/login/: __init__.py  api_service.py  local_service.py  service.py
eyetracker/data/record/: __init__.py  api_service.py  local_service.py  service.py
eyetracker/data/test/: __init__.py  api_dao.py  dao.py  export.py  import_zip.py  local_dao.py
eyetracker/ui/: theme.py
eyetracker/ui/pages/: calibration.py  create_test_page.py  home.py  record_detail_page.py  (+6 more)
tests/: test_blink.py  test_create_test_form.py  test_draft_cache.py  test_fixation.py  test_fixation_offline.py  test_heatmap.py  test_login_service.py  test_metrics.py  test_monitor.py  test_precision.py  test_record_service.py  test_regression.py  test_report_export.py  test_roi.py  test_settings.py  test_test_dao.py  test_test_export.py  test_test_import.py  test_time_fmt.py  test_util.py
(+1 files in other folders)
