[tool.poetry]
name = "eyetracker"
version = "0.1.0"
description = "Eye tracking via webcam for desktop applications"
authors = ["Eye Tracker Team"]
readme = "README.md"
packages = [{include = "eyetracker"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^1.24"
opencv-python = "^4.8"
mediapipe = "^0.10"
PyQt6 = "^6.6"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pyinstaller = "^6.0"

[tool.poetry.scripts]
eyetracker = "eyetracker.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
